--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,6 @@
 body {
-  background-color: #585858;
   font-weight: 400;
+  background-color: #585858;
 }
 
 .content-section {
@@ -12,8 +12,8 @@ body {
 }
 
 .header {
-  padding: 92px 50px;
   flex-grow: 0;
+  padding: 92px 50px;
 }
 
 .grid-container-header {
@@ -33,23 +33,23 @@ body {
   height: 105px;
 }
 
-.header__menu{
+.header__menu {
   display: flex;
   align-self: flex-start;
-  padding-top: 43px;  /* отступы по макету */
-  padding-bottom: 45px;  /* отступы по макету */
+  padding-top: 43px;
+  padding-bottom: 45px;
 }
 
 .header__link {
+  border-bottom: 1px solid #000;
   color: #000;
-  font-family: 'Raleway', sans-serif;
-  font-size: 18px;
+  font-family: "Raleway", sans-serif;
   font-weight: 400;
+  font-size: 18px;
   text-decoration: none;
-  border-bottom: 1px solid #000;  /* подчеркивание с помощью границы */
 }
 
-.header__links-list{
+.header__links-list {
   display: flex;
   flex-direction: row;
   gap: 32px;
@@ -59,9 +59,9 @@ body {
   list-style: circle;
 }
 
-.header__link_active .header__link{
-  text-decoration: none;
+.header__link_active .header__link {
   border-bottom: none; /* убирает границу у активного элемента */
+  text-decoration: none;
 }
 
 .header__links-list-item_no-bullit {
@@ -69,20 +69,16 @@ body {
 }
 
 .address {
-  width: 240px;
   display: flex;
-  align-self: center;
   justify-self: end;
-  padding: 5px auto 7px;
+  align-self: center;
+  width: 240px;
+  padding: 5px 0 6px;
 }
 
 .border-bottom-address {
+  border-bottom: 1px solid #000;
   text-decoration: none;
-  border-bottom: 1px solid #000;  /* подчеркивание с помощью границы */ 
-}
-
-.address-list {
-
 }
 
 .address-list-item {
@@ -91,14 +87,113 @@ body {
 
 .address-list-item-contats {
   color: #000;
-  font-family: 'Raleway', sans-serif;
-  font-size: 18px;
+  font-family: "Raleway", sans-serif;
   font-weight: 400;
-  line-height: 24.3px;
+  font-size: 18px;
   font-style: normal;
+  line-height: 24.3px;
 }
 
 .cover {
+  position: relative;
+  padding: 165px 50px 50px;
+}
+
+.cover-image {
+  position: relative;
+  min-height: 757px;
+  background-image: url(../images/cover.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.6);
+}
+
+.cover__title {
+  position: relative;
+  z-index: 1;
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+  font-weight: bold;
+  font-size: 100px;
+  line-height: 115%;
+  letter-spacing: 30px;
+  text-transform: uppercase;
+}
+
+.aligned-text {
+  display: block;
+}
+
+.no-letter-spacing {
+  letter-spacing: 0;
+}
+
+.letter-spacing-extended {
+  letter-spacing: 60px;
+}
+
+.aligned-text_center {
+  width: 1280px;
+  margin: 20px 0px;
+  line-height: 100%;
+  text-align: center;
+}
+
+.aligned-text_right {
+  line-height: 100%;
+  text-align: right;
+}
+
+.cover__description {
+  position: absolute;
+  right: 50px;
+  bottom: 50px;
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  align-items: center;
+  gap: 78px;
+}
+
+.cover__description-text {
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: 28px;
+  text-transform: uppercase;
+  word-spacing: 17px;
+}
+
+.word-spacing-extended {
+  word-spacing: 22px;
+}
+
+.bet-button {
+  border: 1px solid #fff;
+  padding: 12px 32px;
+  background-color: transparent;
+  cursor: pointer;
+}
+
+.bet-button-text {
+  color: #fff;
+  font-family: "Raleway", sans-serif;
+  font-weight: 400;
+  font-size: 22px;
+  line-height: normal;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
 }
 
 .lots {
@@ -110,5 +205,5 @@ body {
 }
 
 .footer {
-padding: 0 50px 90px;
+  padding: 0 50px 90px;
 }
