--- a/styles/style.css
+++ b/styles/style.css
@@ -5,7 +5,8 @@ body {
 
 .content-section {
   box-sizing: border-box;
-  max-width: 1440px;
+  width: 1440px;
+  min-width: 1100px;
   min-height: 100px;
   margin: auto;
   background-color: #fff;
@@ -16,7 +17,7 @@ body {
   padding: 92px 50px;
 }
 
-.grid-container-header {
+.grid-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-template-rows: 1fr;
@@ -25,12 +26,13 @@ body {
 .header__logo {
   display: flex;
   justify-self: center;
+  width: 148px;
+  height: 105px;
 }
 
 .header__logo-image {
   display: block;
-  width: 148px;
-  height: 105px;
+  width: 100%;
 }
 
 .header__menu {
@@ -41,12 +43,12 @@ body {
 }
 
 .header__link {
-  border-bottom: 1px solid #000;
   color: #000;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 18px;
   text-decoration: none;
+  border-bottom: 1px solid #000;
 }
 
 .header__links-list {
@@ -60,12 +62,12 @@ body {
 }
 
 .header__link_active .header__link {
-  border-bottom: none; /* убирает границу у активного элемента */
+  border-bottom: none;
   text-decoration: none;
 }
 
 .header__links-list-item_no-bullit {
-  list-style: none; /* убирает кружок у первого элемента */
+  list-style: none;
 }
 
 .address {
@@ -87,7 +89,7 @@ body {
 
 .address-list-item-contats {
   color: #000;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 18px;
   font-style: normal;
@@ -121,7 +123,7 @@ body {
   position: relative;
   z-index: 1;
   color: #fff;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: bold;
   font-size: 100px;
   line-height: 115%;
@@ -166,7 +168,7 @@ body {
 
 .cover__description-text {
   color: #fff;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: 28px;
@@ -175,7 +177,7 @@ body {
 }
 
 .word-spacing-extended {
-  word-spacing: 22px;
+  margin-right: 5px;
 }
 
 .bet-button {
@@ -187,7 +189,7 @@ body {
 
 .bet-button-text {
   color: #fff;
-  font-family: "Raleway", sans-serif;
+  font-family: 'Raleway', sans-serif;
   font-weight: 400;
   font-size: 22px;
   line-height: normal;
@@ -197,13 +199,217 @@ body {
 }
 
 .lots {
-  padding: 180px 50px 181px;
+  padding: 180px 50px 0;
+}
+
+.lots__heading {
+  margin-left: 40px;
+  color: #000;
+  font-family: 'Raleway', sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.lots__card-list {
+  margin-top: 27px;
+  margin-bottom: 30px;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: 1fr;
+  list-style: none;
+  gap: 25px;
+}
+
+.lots__card-list-item {
+  flex-grow: 1;
+  text-decoration: none;
+}
+
+.card-link {
+  text-decoration: none;
+}
+
+.card {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 450px;
+  padding: 50px 40px;
+}
+
+.card_type_film {
+  position: relative;
+  background-image: url(../images/card-lot-01.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card_type_book {
+  position: relative;
+  background-image: url(../images/card-lot-02.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card_type_picture {
+  position: relative;
+  background-image: url(../images/card-lot-03.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.card__title {
+  display: inline-block;
+  color: #fff;
+  z-index: 1;
+  font-family: 'Raleway', sans-serif;
+  font-size: 22px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 120%;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  text-underline-offset: 2px;
+  text-transform: uppercase;
+}
+
+.card__text {
+  color: #fff;
+  z-index: 1;
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: 120%;
+}
+
+.no-point-spacing {
+  letter-spacing: -1px;
+}
+
+.lots__look-more-link {
+  margin-left: 40px;
+  color: #000;
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: none;
+  border-bottom: 1px solid #000;
 }
 
 .about {
-  padding: 0 50px 180px;
+  padding: 181px 50px 180px;
+}
+
+.about__column {
+  display: grid;
+  grid-template-columns: 430px auto;
+  grid-template-rows: 1fr;
+  grid-column-gap: 25px;
+}
+
+.about_logo {
+  padding: 0 95px;
+}
+
+.background_logo {
+  position: relative;
+  margin: auto;
+  height: 240px;
+  background-color: #000;
+  border-radius: 50%;
+}
+
+.about_logo-image {
+  position: absolute;
+  width: 148px;
+  top: 62px;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.about__title {
+  margin: 100px auto 100px;
+  color: #000;
+  font-family: 'Raleway', sans-serif;
+  font-size: 40px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-transform: uppercase;
+}
+
+.about__text {
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
+  color: #000;
+  font-family: 'Raleway', sans-serif;
+  font-size: 20px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
 }
 
 .footer {
   padding: 0 50px 90px;
+}
+
+.addres_no-padding {
+  padding: 0;
+  display: flex;
+  justify-self: start;
+}
+
+.footer__menu {
+  display: flex;
+  justify-content: center;
+}
+
+.footer__menu-list {
+  display: flex;
+  flex-direction: column;
+}
+
+.footer__menu-list-item {
+  text-align: center;
+  list-style: none;
+}
+
+.footer__menu-link {
+  color: #000;
+  text-align: center;
+  font-family: 'Raleway', sans-serif;
+  font-size: 18px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  text-decoration: none;
+  border-bottom: 1px solid #000;
+}
+
+.footer__link_active .footer__menu-link {
+  border-bottom: none;
+}
+
+.footer__social-list {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  gap: 48px;
+}
+
+.footer__social-list-item {
+  list-style: none;
+}
+
+.footer__social-link {
+}
+
+.footer__social-icon {
+  width: 48px;
 }
