--- a/styles/style.css
+++ b/styles/style.css
@@ -3,6 +3,11 @@
   background-color: #585858;
 }
 
+:link:hover {
+  transition: background-color 0.3s ease;
+  background-color: rgba(63, 63, 63, 0.1);
+}
+
 .content-section {
   box-sizing: border-box;
   width: 1440px;
@@ -194,6 +199,11 @@
   cursor: pointer;
 }
 
+.bet-button:hover {
+  transition: background-color 0.3s ease;
+  background-color: rgba(255, 255, 255, 0.2);
+}
+
 .bet-button-text {
   color: #fff;
   font-family: "Raleway", sans-serif;
@@ -275,6 +285,12 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.6);
+}
+
+.card_type-image:hover::before {
+  position: absolute;
+  transition: background-color 0.3s ease;
+  background-color: rgba(0, 0, 0, 0.7);
 }
 
 .card__title {
@@ -417,6 +433,18 @@
   flex-direction: row;
   justify-content: flex-end;
   gap: 48px;
+}
+
+.footer__social-link {
+  font-size: 0;
+  display: inline-block;
+  height: auto;
+}
+
+.footer__social-link:hover {
+  transition: background-color 0.3s ease;
+  border-radius: 50%;
+  background-color: rgba(0, 0, 0, 0.1);
 }
 
 .footer__social-list-item {
