--- a/styles/style.css
+++ b/styles/style.css
@@ -4,8 +4,8 @@
 }
 
 :link:hover {
-  transition: background-color 0.3s ease;
-  background-color: rgba(63, 63, 63, 0.1);
+  transition: background-color .3s ease;
+  background-color: rgba(63, 63, 63, .1);
 }
 
 .content-section {
@@ -129,7 +129,7 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, .6);
 }
 
 .cover__title {
@@ -158,7 +158,7 @@
 
 .aligned-text_center {
   width: 1280px;
-  margin: 20px 0px;
+  margin: 20px 0;
   line-height: 100%;
   text-align: center;
 }
@@ -176,9 +176,6 @@
 }
 
 .cover__description-text {
-  display: flex;
-  flex-direction: row;
-  gap: 28px;
   color: #fff;
   font-family: "Raleway", sans-serif;
   font-weight: 400;
@@ -187,6 +184,10 @@
   text-transform: uppercase;
   word-spacing: 17px;
   letter-spacing: 0;
+}
+
+.cover__description-word-spacing {
+  word-spacing: 22px;
 }
 
 .bet-button {
@@ -198,8 +199,8 @@
 }
 
 .bet-button:hover {
-  transition: background-color 0.3s ease;
-  background-color: rgba(255, 255, 255, 0.2);
+  transition: background-color .3s ease;
+  background-color: rgba(255, 255, 255, .2);
 }
 
 .bet-button-text {
@@ -273,22 +274,20 @@
   background-repeat: no-repeat;
 }
 
-.card_type_film::before,
-.card_type_book::before,
-.card_type_picture::before {
+.card::before {
   content: "";
   position: absolute;
   left: 0;
   top: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, .6);
 }
 
 .card_type-image:hover::before {
   position: absolute;
-  transition: background-color 0.3s ease;
-  background-color: rgba(0, 0, 0, 0.7);
+  transition: background-color .3s ease;
+  background-color: rgba(0, 0, 0, .7);
 }
 
 .card__title {
@@ -422,7 +421,7 @@
   border-bottom: 1px solid #000;
 }
 
-.footer__link_active .footer__menu-link {
+.footer__link_active {
   border-bottom: none;
 }
 
@@ -440,9 +439,9 @@
 }
 
 .footer__social-link:hover {
-  transition: background-color 0.3s ease;
+  transition: background-color .3s ease;
   border-radius: 50%;
-  background-color: rgba(0, 0, 0, 0.1);
+  background-color: rgba(0, 0, 0, .1);
 }
 
 .footer__social-list-item {
